--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -228,6 +228,11 @@
       </property>
      </widget>
     </widget>
+    <widget class="QWidget" name="tab_4">
+     <attribute name="title">
+      <string>modifier un sportif</string>
+     </attribute>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -236,7 +241,7 @@
      <x>0</x>
      <y>0</y>
      <width>806</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
