--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>842</width>
-    <height>523</height>
+    <width>969</width>
+    <height>687</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,12 +19,12 @@
      <rect>
       <x>70</x>
       <y>30</y>
-      <width>701</width>
-      <height>391</height>
+      <width>801</width>
+      <height>471</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -176,8 +176,8 @@
        <rect>
         <x>-5</x>
         <y>0</y>
-        <width>701</width>
-        <height>361</height>
+        <width>761</width>
+        <height>421</height>
        </rect>
       </property>
       <property name="text">
@@ -199,8 +199,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>701</width>
-        <height>361</height>
+        <width>521</width>
+        <height>311</height>
        </rect>
       </property>
      </widget>
@@ -250,8 +250,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>701</width>
-        <height>361</height>
+        <width>761</width>
+        <height>431</height>
        </rect>
       </property>
       <property name="text">
@@ -416,8 +416,8 @@
        <rect>
         <x>0</x>
         <y>-20</y>
-        <width>691</width>
-        <height>381</height>
+        <width>771</width>
+        <height>461</height>
        </rect>
       </property>
       <property name="text">
@@ -517,7 +517,7 @@
       <property name="geometry">
        <rect>
         <x>60</x>
-        <y>140</y>
+        <y>130</y>
         <width>93</width>
         <height>28</height>
        </rect>
@@ -526,11 +526,11 @@
        <string>rechercher</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pb_rechercher2">
+     <widget class="QPushButton" name="pb_rechercher_id">
       <property name="geometry">
        <rect>
         <x>250</x>
-        <y>140</y>
+        <y>130</y>
         <width>93</width>
         <height>28</height>
        </rect>
@@ -539,17 +539,56 @@
        <string>rechercher</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pb_rechercher1">
+     <widget class="QPushButton" name="pb_rechercher_type_sport">
       <property name="geometry">
        <rect>
         <x>440</x>
-        <y>140</y>
+        <y>130</y>
         <width>93</width>
         <height>28</height>
        </rect>
       </property>
       <property name="text">
        <string>rechercher</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pb_trier_n">
+      <property name="geometry">
+       <rect>
+        <x>570</x>
+        <y>180</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>trier par nom</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pb_trier_i">
+      <property name="geometry">
+       <rect>
+        <x>570</x>
+        <y>240</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>trier par id</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pb_trier_a">
+      <property name="geometry">
+       <rect>
+        <x>570</x>
+        <y>300</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>trier par age</string>
       </property>
      </widget>
     </widget>
@@ -560,7 +599,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>842</width>
+     <width>969</width>
      <height>26</height>
     </rect>
    </property>
