--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,13 +18,13 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>30</y>
+      <y>50</y>
       <width>801</width>
       <height>471</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>5</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -33,8 +33,8 @@
      <widget class="QGroupBox" name="groupBox">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>20</y>
+        <x>110</x>
+        <y>10</y>
         <width>441</width>
         <height>271</height>
        </rect>
@@ -174,17 +174,17 @@
      <widget class="QLabel" name="label_14">
       <property name="geometry">
        <rect>
-        <x>-5</x>
+        <x>0</x>
         <y>0</y>
-        <width>761</width>
-        <height>421</height>
+        <width>801</width>
+        <height>441</height>
        </rect>
       </property>
       <property name="text">
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>D:/projet c++/07-45.jpg</pixmap>
+       <pixmap>D:/projet c++/olympics.jpg</pixmap>
       </property>
      </widget>
      <zorder>label_14</zorder>
@@ -204,6 +204,42 @@
        </rect>
       </property>
      </widget>
+     <widget class="QPushButton" name="pb_update">
+      <property name="geometry">
+       <rect>
+        <x>620</x>
+        <y>120</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>mise à jour</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pb_print">
+      <property name="geometry">
+       <rect>
+        <x>620</x>
+        <y>210</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>impression</string>
+      </property>
+     </widget>
+     <widget class="QTextEdit" name="textEdit">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>320</y>
+        <width>521</width>
+        <height>121</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
@@ -212,8 +248,8 @@
      <widget class="QLabel" name="label_6">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>70</y>
+        <x>260</x>
+        <y>30</y>
         <width>71</width>
         <height>16</height>
        </rect>
@@ -225,8 +261,8 @@
      <widget class="QLineEdit" name="le_id_supp">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>70</y>
+        <x>360</x>
+        <y>30</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -235,8 +271,8 @@
      <widget class="QPushButton" name="pb_supprimer">
       <property name="geometry">
        <rect>
-        <x>390</x>
-        <y>80</y>
+        <x>550</x>
+        <y>30</y>
         <width>75</width>
         <height>23</height>
        </rect>
@@ -250,15 +286,15 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>761</width>
-        <height>431</height>
+        <width>801</width>
+        <height>441</height>
        </rect>
       </property>
       <property name="text">
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>D:/projet c++/07-45.jpg</pixmap>
+       <pixmap>D:/projet c++/olympics.jpg</pixmap>
       </property>
      </widget>
      <zorder>label_13</zorder>
@@ -273,8 +309,8 @@
      <widget class="QGroupBox" name="groupBox_2">
       <property name="geometry">
        <rect>
-        <x>70</x>
-        <y>20</y>
+        <x>110</x>
+        <y>10</y>
         <width>441</width>
         <height>271</height>
        </rect>
@@ -415,16 +451,16 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-20</y>
-        <width>771</width>
-        <height>461</height>
+        <y>0</y>
+        <width>801</width>
+        <height>441</height>
        </rect>
       </property>
       <property name="text">
        <string/>
       </property>
       <property name="pixmap">
-       <pixmap>D:/projet c++/07-45.jpg</pixmap>
+       <pixmap>D:/projet c++/olympics.jpg</pixmap>
       </property>
      </widget>
      <zorder>label_12</zorder>
@@ -432,7 +468,7 @@
     </widget>
     <widget class="QWidget" name="tab_5">
      <attribute name="title">
-      <string>rechercher un sportif</string>
+      <string>rechercher et trier un sportif</string>
      </attribute>
      <widget class="QLabel" name="label_15">
       <property name="geometry">
@@ -591,6 +627,41 @@
        <string>trier par age</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_18">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>801</width>
+        <height>441</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>D:/projet c++/olympics.jpg</pixmap>
+      </property>
+     </widget>
+     <zorder>label_18</zorder>
+     <zorder>label_15</zorder>
+     <zorder>label_16</zorder>
+     <zorder>label_17</zorder>
+     <zorder>le_nom_r</zorder>
+     <zorder>le_id_r</zorder>
+     <zorder>le_type_sport_r</zorder>
+     <zorder>tabler</zorder>
+     <zorder>pb_rechercher</zorder>
+     <zorder>pb_rechercher_id</zorder>
+     <zorder>pb_rechercher_type_sport</zorder>
+     <zorder>pb_trier_n</zorder>
+     <zorder>pb_trier_i</zorder>
+     <zorder>pb_trier_a</zorder>
+    </widget>
+    <widget class="QWidget" name="tab_6">
+     <attribute name="title">
+      <string>impression</string>
+     </attribute>
     </widget>
    </widget>
   </widget>
