--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -297,10 +297,21 @@
        <pixmap>D:/projet c++/olympics.jpg</pixmap>
       </property>
      </widget>
+     <widget class="QComboBox" name="comboBox_id_supp">
+      <property name="geometry">
+       <rect>
+        <x>560</x>
+        <y>70</y>
+        <width>69</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
      <zorder>label_13</zorder>
      <zorder>label_6</zorder>
      <zorder>le_id_supp</zorder>
      <zorder>pb_supprimer</zorder>
+     <zorder>comboBox_id_supp</zorder>
     </widget>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
@@ -671,7 +682,7 @@
      <x>0</x>
      <y>0</y>
      <width>969</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
